# CppCrossPlatformExample

./: .gitignore  BuildAndroid.cmd  BuildAndroidARM64.cmd  BuildAndroidX64.cmd  BuildIOS.sh  BuildLinux.cmd  BuildLinux.sh  BuildMacOS.sh  BuildOpenHarmony.cmd  BuildPS.cmd  BuildWindows.cmd  BuildXbox.cmd  CMakeLists.txt  README.md  library.cpp
CMake/: gdk_build.props  grdk_toolchain.cmake  gxdk_toolchain.cmake  gxdk_xs_toolchain.cmake
Tools/cmake/share/cmake-3.29/Modules/: CMakeASMCompiler.cmake.in  CMakeASM_MARMASMInformation.cmake  CMakeCCompiler.cmake.in  CMakeCInformation.cmake  CMakeCUDACompiler.cmake.in  CMakeCUDACompilerABI.cu  CMakeCXXCompiler.cmake.in  CMakeCXXInformation.cmake  CMakeCompilerCUDAArch.h  CMakeCompilerIdDetection.cmake  CMakeDetermineASMCompiler.cmake  CMakeDetermineCCompiler.cmake  CMakeDetermineCSharpCompiler.cmake  CMakeDetermineCUDACompiler.cmake  CMakeDetermineCXXCompiler.cmake  CMakeDetermineCompiler.cmake  CMakeDetermineCompilerABI.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineFortranCompiler.cmake  CMakeDetermineHIPCompiler.cmake  CMakeDeterminePS5PsslCompiler.cmake  CMakeDetermineSystem.cmake  CMakeFindBinUtils.cmake  CMakeFindPackageMode.cmake  CMakeFortranCompiler.cmake.in  CMakeFortranCompilerId.F.in  CMakeFortranInformation.cmake  CMakeGenericSystem.cmake  CMakeHIPCompiler.cmake.in  CMakeHIPCompilerABI.hip  CMakeHIPCompilerId.hip.in  CMakeHIPInformation.cmake  CMakeOBJCCompiler.cmake.in  CMakeOBJCInformation.cmake  CMakeOBJCXXCompiler.cmake.in  CMakeOBJCXXInformation.cmake  CMakePS5PsslCompiler.cmake.in  CMakePS5PsslInformation.cmake  CMakePackageConfigHelpers.cmake  CMakeParseImplicitLinkInfo.cmake  (+105 more)
Tools/cmake/share/cmake-3.29/Modules/CheckIPOSupported/: main.c
Tools/cmake/share/cmake-3.29/Modules/Compiler/: ADSP-ASM.cmake  ADSP.cmake  Clang-CXX.cmake  Clang.cmake  CrayClang-C.cmake  CrayClang-CXX.cmake  CrayClang.cmake  GNU-CXX.cmake  GNU.cmake  IBMClang-CXX.cmake  IBMClang.cmake  IntelLLVM.cmake  LCC-C.cmake  LCC-CXX.cmake  LCC.cmake  LLVMFlang-Fortran.cmake  MSVC-CXX.cmake  NVIDIA-CUDA.cmake  NVIDIA-HIP.cmake  NVIDIA.cmake  OrangeC-C.cmake  OrangeC-CXX.cmake  OrangeC.cmake  PGI.cmake  TIClang-C.cmake  TIClang-CXX.cmake  TIClang.cmake
Tools/cmake/share/cmake-3.29/Modules/ExternalProject/: download.cmake.in
Tools/cmake/share/cmake-3.29/Modules/FindPython/: Support.cmake
Tools/cmake/share/cmake-3.29/Modules/FortranCInterface/: Detect.cmake
Tools/cmake/share/cmake-3.29/Modules/Internal/: AppleArchitectureSelection.cmake.in  ApplePlatformSelection.cmake.in  CMakeCUDAArchitecturesAll.cmake  CMakeCUDAArchitecturesNative.cmake  CMakeCUDAArchitecturesValidate.cmake  CMakeCUDAFilterImplicitLibs.cmake  CMakeCUDAFindToolkit.cmake  CMakeDetermineLinkerId.cmake  CMakeNVCCFilterImplicitInfo.cmake  CMakeNVCCParseImplicitInfo.cmake  FeatureTesting.cmake
Tools/cmake/share/cmake-3.29/Modules/Internal/CPack/: CPackDeb.cmake  CPackFreeBSD.cmake  CPackNuGet.cmake  CPackRPM.cmake  CPackWIX.cmake  NSIS.template.in  WIX.template.in
Tools/cmake/share/cmake-3.29/Modules/Platform/: AIX-GNU.cmake  AIX-XL.cmake  Apple-Apple-Swift.cmake  Apple-Clang.cmake  Apple-GNU.cmake  CYGWIN-GNU.cmake  Darwin-Initialize.cmake  Darwin.cmake  Linux-Apple-Swift.cmake  Linux-GNU.cmake  Prospero.cmake  Windows-Apple-Swift.cmake  Windows-Clang.cmake  Windows-GNU.cmake  Windows-IntelLLVM.cmake  Windows-LLVMFlang-Fortran.cmake  Windows-MSVC.cmake  Windows-NVIDIA-CUDA.cmake  Windows.cmake  WindowsKernelModeDriver-Initialize.cmake  visionOS-Initialize.cmake
Tools/cmake/share/cmake-3.29/Modules/UseJava/: javaTargets.cmake.in
Tools/cmake/share/cmake-3.29/Templates/MSBuild/FlagTables/: PS5Clang_CL.json  PS5Clang_Link.json  v142_CL.json  v143_CL.json
